# RustFFT

./: .gitignore  .gitmodules  .travis.yml  .~lock.costestimates.ods#  .~lock.costestimates2.ods#  3457  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  UpdateEstimates.md  UpgradeGuide4to5.md  all.txt  all357  allorig  b3  b35  b357  build.rs  butterflies.txt  costcheck.txt  costestimates.ods  costestimates2.ods  estimatecheck.txt  fancyplanner  h qqqq  new357  newbflies  newmaster  normal.txt  oldbflies  orig  orig2  radix  rustfmt.toml  tee  unrolled.txt
.github/workflows/: run_test.yml
benches/: bench_check_neon_2to1024.rs  bench_check_scalar_2to1024.rs  bench_check_sse_2to1024.rs  bench_compare_scalar_neon.rs  bench_compare_scalar_sse_avx.rs  bench_compare_scalar_wasm_simd.rs  bench_for_estimates.rs  bench_iai.rs  bench_iaicheck.rs  bench_iaicheck_ref.rs  bench_like_iai.rs  bench_rustfft.rs  bench_rustfft_neon.rs  bench_rustfft_scalar.rs  bench_rustfft_sse.rs  bench_rustfft_wasm_simd.rs  compare_3n2m_strategies.rs  kissfft.rs  rustfft.rs
examples/: asmtest.rs  concurrency.rs  simple.rs
examples/stm32/: Cargo.toml  memory.x
examples/stm32/.cargo/: config
examples/stm32/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: avx.rs  neon.rs  roundtrip.rs  scalar.rs  sse.rs
src/: algorithm.rs  array_utils.rs  butterflies.rs  common.rs  fft_cache.rs  fft_helper.rs  hardcoded_butterflies.rs  iter_util.rs  lib.rs  math_utils.rs  mixed_radix.rs  plan.rs  raders_algorithm.rs  radix4.rs  scalar_planner_estimates.rs  stride.rs  test.rs  test_utils.rs  twiddles.rs
src/algorithm/: bluestein.rs  bluesteins_algorithm.rs  butterflies.rs  dft.rs  dht.rs  good_thomas_algorithm.rs  mixed_radix.rs  mixed_radix_single.rs  mixed_radix_terminal.rs  mod.rs  raders_algorithm.rs  radix3.rs  radix4.rs  radixn.rs  real_to_complex.rs  split_radix.rs  sse_butterflies.rs  sse_radix4.rs
src/algorithm/avx/: avx32_bluesteins.rs  avx32_butterflies.rs  avx32_mixed_radix.rs  avx32_split_radix.rs  avx32_utils.rs  avx64_butterflies.rs  avx64_utils.rs  avx_bluesteins.rs  avx_butterflies.rs  avx_mixed_radix.rs  avx_planner.rs  avx_raders.rs  avx_split_radix.rs  avx_utils.rs  avx_vector.rs  mod.rs
src/algorithm/mixed_radix_cxn/: mixed_radix_4xn.rs  mixed_radix_4xn_avx.rs  mod.rs
src/algorithm/simd/: avx_bluesteins.rs  avx_butterflies.rs  avx_mixed_radix.rs  avx_split_radix.rs  avx_utils.rs  mod.rs
src/avx/: avx32_butterflies.rs  avx32_utils.rs  avx64_butterflies.rs  avx64_utils.rs  avx_bluesteins.rs  avx_mixed_radix.rs  avx_planner.rs  avx_raders.rs  avx_real_to_complex.rs  avx_vector.rs  mod.rs
src/neon/: mod.rs  neon_butterflies.rs  neon_common.rs  neon_planner.rs  neon_prime_butterflies.rs  neon_radix4.rs  neon_utils.rs  neon_vector.rs
src/r2c/: mixed_radix_r2c.rs  mod.rs
src/sse/: mod.rs  sse_butterflies.rs  sse_common.rs  sse_planner.rs  sse_prime_butterflies.rs  sse_radix4.rs  sse_utils.rs  sse_vector.rs
src/wasm_simd/: mod.rs  wasm_simd_butterflies.rs  wasm_simd_common.rs  wasm_simd_planner.rs  wasm_simd_prime_butterflies.rs  wasm_simd_radix4.rs  wasm_simd_utils.rs  wasm_simd_vector.rs
tests/: accuracy.rs  concurrency.rs  test_basic.rs  test_immutable.rs
tools/: .~lock.costestimates.ods#  costestimates.ods  fit_bluesteins.py  fit_butterflies.py  fit_mixedradixes.py  fit_raders.py  fit_radix4.py  gen_neon_butterflies.py  gen_sse_butterflies.py  genbutterflies.py  p2comparison.py  p2comparison_neon.py  p2comparison_wasm_simd.py  read_cachegrind_benches.py  read_cachegrind_series.py
tools/estimates/: analyze_100k_results.py  fit_bluesteins.py  fit_butterflies.py  fit_mixedradixes.py  fit_raders.py  fit_radix4.py  normalize_data.py  read_bench_series.py  run_benches.sh
tools/gen_simd_butterflies/: Cargo.toml
tools/gen_simd_butterflies/src/: main.rs
tools/gen_simd_butterflies/src/templates/: prime_template.hbs.rs  prime_template.tt.rs  sse_template.tt.rs
tools/iai_estimates/: fit_raders.py  fit_radix4.py  read_planned.py
