[package]

name = "rustfft"
version = "5.0.1"
authors = ["Allen Welkie <allen.welkie at gmail>", "Elliott Mahler <join.together at gmail>"]
edition = "2018"

description = "High-performance FFT library written in pure Rust."
documentation = "https://docs.rs/rustfft/"
repository = "https://github.com/ejmahler/RustFFT"
keywords = ["fft", "dft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "multimedia::encoding", "science"]
license = "MIT OR Apache-2.0"

[features]
default = ["avx"]

# On x86_64, the "avx" feature enables compilation of AVX-acclerated code. Enabling it improves performance if the client CPU supports AVX, while disabling it reduces compile time and binary size.
# On every other platform, this feature does nothing, and RustFFT will behave like it's not set.
avx = []

[dependencies]
num-complex = "0.3"
num-traits = "0.2"
num-integer = "^0.1.40"
strength_reduce = "^0.2.1"
transpose = "0.2"
primal-check = "0.3.1"

[dev-dependencies]
rand = "0.6"
iai = { version = "0.1.1", default-features = false, features = ["macro"] }
paste = "1.0.4"

[[bench]]
name = "bench_iai"
harness = false

