[package]

name = "rustfft"
version = "6.1.0"
authors = ["Allen Welkie <allen.welkie at gmail>", "Elliott Mahler <join.together at gmail>"]
edition = "2018"

description = "High-performance FFT library written in pure Rust."
documentation = "https://docs.rs/rustfft/"
repository = "https://github.com/ejmahler/RustFFT"
keywords = ["fft", "dft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "multimedia::encoding", "science"]
license = "MIT OR Apache-2.0"

[features]
default = ["avx", "sse", "neon"]

# On x86_64, the "avx" feature enables compilation of AVX-acclerated code. 
# Similarly, the "sse" feature enables SSE-accelerated code. 
# Enabling these improves performance if the client CPU supports AVX or SSE, while disabling them reduces compile time and binary size.
# If both are enabled, RustFFT will use AVX if the CPU supports it. If not, it will check for SSE4.1.
# If neither instruction set is available, it will fall back to the scalar code.  
# On every other platform, these features do nothing, and RustFFT will behave like they are not set.
#
# On AArch64, the "neon" feature enables compilation of Neon-accelerated code.
#
# The "no-std" feature makes the crate `no-std` and uses libm for math operations.
avx = ["dep:std_detect"]
sse = ["dep:std_detect"]
neon = ["dep:std_detect"]
wasm_simd = []
no-std = ["dep:libm", "primal-check/no-std"]


[dependencies]
num-complex = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "^0.1.40", default-features = false }
strength_reduce = { version = "0.2.4", default-features = false }
transpose = { version = "0.2", default-features = false }
primal-check = { git = "https://github.com/piotrfila/primal.git", ver = "48526bbba548946ef85d6736b9e69544dffb2100" }
hashbrown = "0.14.3"
libm = { version = "0.2.8", optional = true }
# the crates.io version is out of date
std_detect = { git = "https://github.com/rust-lang/stdarch.git", rev = "821a641b4b43b31a9aa7749141abd43878d019b1", optional = true }

[dev-dependencies]
rand = "0.8"
paste = "1.0.9"
getrandom = {version = "^0.2", features = ["js"]}
wasm-bindgen-test = "^0.3.36"

[build-dependencies]
version_check = "0.9"
