[package]
name = "rustfft-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rustfft]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "scalar"
path = "fuzz_targets/scalar.rs"
test = false
doc = false

[[bin]]
name = "sse"
path = "fuzz_targets/sse.rs"
test = false
doc = false

[[bin]]
name = "avx"
path = "fuzz_targets/avx.rs"
test = false
doc = false

[[bin]]
name = "neon"
path = "fuzz_targets/neon.rs"
test = false
doc = false